umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_rdkit_Issue2316677.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 26
sum_formula: C19N3O2S
graph6: XsCGGS@?G?_A?C?_??G?@??G??c?????C??@???G???_??P???C
