umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_rdkit_Issue3375684.1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 21
bond_count: 22
sum_formula: C14N3O3S
graph6: ThEH?C@?G?_@?@?G_?_?@??GC????G??G??C
