umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_rdkit_ST-0023268.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 68
bond_count: 75
sum_formula: C50N11O6S
graph6: ~?@CpGOGC@CG??C?@?@?@??@??C??G?OG??_??@??AG??A???@??_@???@????a?????A???????G????g????q????????G???????_????@?????@??????_????AG?????O??????C???O???????@????????C??????A???????O???????_??????A???????O????????_???????O???????@????????G?????@???????????G????????C????????@?????????G????????G_????????C????????A???????????_?????????G?????????@????????A?C??????????_??????????G??????_????
